added basic summary page support

--- a/confluence-templates/object-page.html
+++ b/confluence-templates/object-page.html
@@ -1,46 +1,34 @@
 <ac:structured-macro ac:macro-id="54a5b3b3-3ae2-4730-9115-8187c94b3209" ac:name="info" ac:schema-version="1">
  <ac:rich-text-body>
-  <p><strong>Generated Content!</strong> This article is automatically generated. <strong>Please do not edit this page directly.</strong> Any manual changes will be overwritten the next time it is generated. Last updated: <strong>{{last-updated}}</strong>.</p>
+  <p><strong>Generated Content! Please do not edit this page directly.</strong> Any manual changes will be overwritten. Last updated: <strong>{{last-updated}}</strong>.</p>
  </ac:rich-text-body>
 </ac:structured-macro>
 <h1>Contents</h1>
 <ac:structured-macro ac:local-id="0f2d9872-c5ce-48f7-809c-15c277f05508" ac:macro-id="9e3ad240-53c9-4ed7-a62f-762a16c4a0ff" ac:name="toc" ac:schema-version="1" data-layout="default">
- <ac:parameter ac:name="minLevel">
-  1
- </ac:parameter>
- <ac:parameter ac:name="maxLevel">
-  6
- </ac:parameter>
- <ac:parameter ac:name="outline">
-  false
- </ac:parameter>
- <ac:parameter ac:name="style">
-  default
- </ac:parameter>
- <ac:parameter ac:name="type">
-  list
- </ac:parameter>
- <ac:parameter ac:name="printable">
-  true
- </ac:parameter>
+ <ac:parameter ac:name="minLevel">1</ac:parameter>
+ <ac:parameter ac:name="maxLevel">6</ac:parameter>
+ <ac:parameter ac:name="outline">false</ac:parameter>
+ <ac:parameter ac:name="style">default</ac:parameter>
+ <ac:parameter ac:name="type">list</ac:parameter>
+ <ac:parameter ac:name="printable">true</ac:parameter>
 </ac:structured-macro>
-<h1>1. State Diagram</h1>
+<h1>1. Overview</h1>
+<p>This page contains an auto-generated design guide reference of the Order object. Please refer to <strong><ac:link ac:card-appearance="inline"><ri:page ri:content-title="DG: Summary"></ri:page><ac:link-body>DG: Summary</ac:link-body></ac:link></strong> for the full summary table of all objects.</p>   
+<h1>2. State Diagram</h1>
 {{state-diagram}}
-<h1>2. Desktop</h1>
-<h2>2.1 Grid View</h2>
+<h1>3. Desktop</h1>
+<h2>3.1 Grid View</h2>
 {{desktop-grid-table-section}}
-<h2>2.2 Details View</h2>
-{{desktop-details-table-section}}
-<h2>2.3 Infocard View</h2>
-{{desktop-infocard-table-section}}
-<h1>3. Mobile</h1>
-<h2>3.1 List View</h2>
-{{mobile-list-table-section}}
 <h2>3.2 Details View</h2>
+{{desktop-details-table-section}}
+<h2>3.3 Infocard View</h2>
+{{desktop-infocard-table-section}}
+<h1>4. Mobile</h1>
+<h2>4.1 List View</h2>
+{{mobile-list-table-section}}
+<h2>4.2 Details View</h2>
 {{mobile-details-table-section}}
-<h1>4. Page Attachments</h1>
+<h1>5. Page Attachments</h1>
 <ac:structured-macro ac:local-id="bbaada53-646b-48d9-99ac-dee89a40adda" ac:macro-id="a44e50828dcbad291f0110f4572fb573fee7d09d43deb91c546aba681591f672" ac:name="attachments" ac:schema-version="1" data-layout="wide">
- <ac:parameter ac:name="sortBy">
-  name
- </ac:parameter>
+ <ac:parameter ac:name="sortBy">name</ac:parameter>
 </ac:structured-macro>
