support for notifications views

--- a/confluence-templates/object-page.html
+++ b/confluence-templates/object-page.html
@@ -25,12 +25,19 @@
 {{desktop-infocard-table-section}}
 <h2>3.4 Settings</h2>
 {{desktop-settings-table-section}}
-<h1>4. Mobile</h1>
-<h2>4.1 List View</h2>
+<h1>4. Email Notifications</h1>
+<h2>4.1 Vendor Notifications</h2>
+{{email-notifications-vendor-table}}
+<h2>4.2 Operations Notifications</h2>
+{{email-notifications-operations-table}}
+<h2>4.3 Client Notifications</h2>
+{{email-notifications-client-table}}
+<h1>5. Mobile</h1>
+<h2>5.1 List View</h2>
 {{mobile-list-table-section}}
-<h2>4.2 Details View</h2>
+<h2>5.2 Details View</h2>
 {{mobile-details-table-section}}
-<h1>5. Page Attachments</h1>
+<h1>6. Page Attachments</h1>
 <ac:structured-macro ac:local-id="bbaada53-646b-48d9-99ac-dee89a40adda" ac:macro-id="a44e50828dcbad291f0110f4572fb573fee7d09d43deb91c546aba681591f672" ac:name="attachments" ac:schema-version="1" data-layout="wide">
  <ac:parameter ac:name="sortBy">name</ac:parameter>
 </ac:structured-macro>
